--- a/src/RoomInWard.module.scss
+++ b/src/RoomInWard.module.scss
@@ -1,10 +1,20 @@
 .room {
-    width: 12%;
-    height: 160px;
-    background-color: aqua;
+    
+    height: 260px;
+    background-color: rgb(0, 255, 255);
+    border: 2px dotted rgb(16, 158, 158);
+    margin-top: 30px 0 10px;
 }
 
 p {
+    text-align: center;
+    color: mediumblue;
     font-weight: 500;
-    font-size: 40px;
+    font-size: 38px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.amountPatient {
+    text-align: start;
+    font-size: 30px;
 }
