--- a/src/AllRoomsInWard/RoomInWard.module.scss
+++ b/src/AllRoomsInWard/RoomInWard.module.scss
@@ -1,20 +1,23 @@
+$primary-color: rgb(33, 33, 83);
+
 .room {
-    
+    width: 120%;
     height: 260px;
     background-color: rgb(0, 255, 255);
-    border: 2px dotted rgb(16, 158, 158);
+    border: 3px solid $primary-color;
     margin-top: 30px 0 10px;
+    border-radius: 5%;
 }
 
 p {
     text-align: center;
-    color: mediumblue;
+    color: $primary-color;
     font-weight: 500;
     font-size: 38px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .amountPatient {
-    text-align: start;
+    text-align: center;
     font-size: 30px;
 }
