--- a/src/AllRoomsInWard/IntensiveRoomInWard.module.scss
+++ b/src/AllRoomsInWard/IntensiveRoomInWard.module.scss
@@ -1,13 +1,21 @@
 $dark-color: rgb(58, 8, 8);
 
 .room {
-    width: 120%;
     height: 260px;
     background-color: rgb(207, 14, 14);
     border: 3px solid $dark-color;
     margin-top: 30px 0 10px;
     border-radius: 5%;
 }
+ .room:hover {
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border-radius: 6px;
+    background-color:  rgb(226, 92, 92);
+    text-transform: uppercase;
+ }
 
 .name {
     text-align: center;
