--- a/src/AllRoomsInWard/RoomInWard.module.scss
+++ b/src/AllRoomsInWard/RoomInWard.module.scss
@@ -1,13 +1,22 @@
 $primary-color: rgb(33, 33, 83);
 
 .room {
-    width: 120%;
     height: 260px;
-    background-color: rgb(0, 255, 255);
+    background-color: rgb(93, 236, 236);
     border: 3px solid $primary-color;
     margin-top: 30px 0 10px;
     border-radius: 5%;
 }
+
+.room:hover {
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border-radius: 6px;
+    background-color:  rgb(186, 244, 248);
+    text-transform: uppercase;
+ }
 
 p {
     text-align: center;
