--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,31 +1,22 @@
 
 .app {
 margin-right: 26px;
-display: flex;
-justify-content: space-around;
-flex-flow: row wrap;
+display: grid;
+grid-template-columns: repeat(3, 350px);
+grid-template-rows: auto ;
+grid-template-areas: 
+"header header header";
+gap: 50px 60px;
+justify-content: center;
 overflow: hidden;
 }
 
 h1 {
+    grid-area: header;
     text-align: center;
     display: block;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: blue;
     font-size: 60px;
     width: 100%;
-}
-
-button {
-    margin-bottom: 30px;
-    height: 40px;
-    background-color: rgb(59, 59, 66);
-    color: rgb(213, 226, 226);
-    font-size: 20px;
-    width: 120%;
-}
-
-button:hover {
-    opacity: 0.7;
-    cursor: grabbing;
 }
