--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
 .app {
 margin-right: 26px;
 display: grid;
-grid-template-columns: repeat(3, 350px);
+grid-template-columns: repeat(3, 28%);
 grid-template-rows: auto ;
 grid-template-areas: 
 "header header header";
