--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,14 +1,12 @@
-
 .app {
-margin-right: 26px;
-display: grid;
-grid-template-columns: repeat(3, 28%);
-grid-template-rows: auto ;
-grid-template-areas: 
-"header header header";
-gap: 50px 60px;
-justify-content: center;
-overflow: hidden;
+    margin-right: 26px;
+    display: grid;
+    grid-template-columns: repeat(3, 28%);
+    grid-template-rows: auto;
+    grid-template-areas: "header header header";
+    gap: 50px 60px;
+    justify-content: center;
+    overflow: hidden;
 }
 
 h1 {
@@ -19,4 +17,12 @@ h1 {
     color: blue;
     font-size: 60px;
     width: 100%;
+    box-shadow: 18px -84px 18px -5px;
+}
+
+h1:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    color: cadetblue;
+    transition: ease-in-out;
 }
