--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,22 +1,10 @@
-
 .app {
-margin-right: 26px;
-display: grid;
-grid-template-columns: repeat(3, 28%);
-grid-template-rows: auto ;
-grid-template-areas: 
-"header header header";
-gap: 50px 60px;
-justify-content: center;
-overflow: hidden;
-}
-
-h1 {
-    grid-area: header;
-    text-align: center;
-    display: block;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: blue;
-    font-size: 60px;
-    width: 100%;
+    margin-right: 26px;
+    display: grid;
+    grid-template-columns: repeat(3, 28%);
+    grid-template-rows: auto;
+    grid-template-areas: "header header header";
+    gap: 50px 60px;
+    justify-content: center;
+    overflow: hidden;
 }
