--- a/src/AllRoomsInWard/IntensiveRoomInWard.module.scss
+++ b/src/AllRoomsInWard/IntensiveRoomInWard.module.scss
@@ -1,5 +1,4 @@
 $dark-color: rgb(58, 8, 8);
-
 .room {
     height: 260px;
     background-color: rgb(207, 14, 14);
@@ -7,14 +6,15 @@ $dark-color: rgb(58, 8, 8);
     margin-top: 30px 0 10px;
     border-radius: 5%;
 }
- .room:hover {
+
+.room:hover {
     transition: all 0.3s ease;
     cursor: pointer;
     border-radius: 6px;
-    background-color:  rgb(226, 92, 92);
- }
+    background-color: rgb(226, 92, 92);
+}
 
-.name {
+.room>p {
     text-align: center;
     color: $dark-color;
     font-weight: 500;
@@ -23,8 +23,33 @@ $dark-color: rgb(58, 8, 8);
 }
 
 .amountPatient {
-    margin-top: 116px;
     text-align: center;
     font-size: 30px;
-    color: $dark-color;
+}
+
+@media (max-width: 510px) {
+    .amountPatient {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .room>p,
+    .amountPatient {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 920px) {
+    .room>p,
+    .amountPatient {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1120px) {
+    .room>p,
+    .amountPatient {
+        font-size: 29px;
+    }
 }
