--- a/src/AllRoomsInWard/OtherRoomInWard.module.scss
+++ b/src/AllRoomsInWard/OtherRoomInWard.module.scss
@@ -1,5 +1,4 @@
 $dark-color: rgb(2, 61, 10);
-
 .room {
     height: 260px;
     background-color: rgb(9, 255, 0);
@@ -12,10 +11,10 @@ $dark-color: rgb(2, 61, 10);
     transition: all 0.3s ease;
     cursor: pointer;
     border-radius: 6px;
-    background-color:  rgb(158, 247, 118);
- }
+    background-color: rgb(158, 247, 118);
+}
 
-.name {
+.room>p {
     text-align: center;
     color: $dark-color;
     font-weight: 500;
@@ -24,8 +23,44 @@ $dark-color: rgb(2, 61, 10);
 }
 
 .amountPatient {
-    margin-top: 116px;
     text-align: center;
     font-size: 30px;
-    color: $dark-color;
+}
+
+.namePhone {
+    display: none;
+}
+
+@media (max-width: 510px) {
+    .namePhone {
+        display: block;
+        font-size: 18px;
+    }
+    .name {
+        display: none;
+    }
+    .amountPatient {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .room>p,
+    .amountPatient {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 920px) {
+    .room>p,
+    .amountPatient {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1120px) {
+    .room>p,
+    .amountPatient {
+        font-size: 29px;
+    }
 }
