--- a/src/AllRoomsInWard/RoomInWard.module.scss
+++ b/src/AllRoomsInWard/RoomInWard.module.scss
@@ -15,7 +15,7 @@ $primary-color: rgb(33, 33, 83);
     background-color: rgb(159, 183, 197);
 }
 
-p {
+.room>p {
     text-align: center;
     color: $primary-color;
     font-weight: 500;
@@ -28,16 +28,29 @@ p {
     font-size: 30px;
 }
 
+@media (max-width: 510px) {
+    .amountPatient {
+        display: none;
+    }
+}
+
 @media (max-width: 768px) {
-    p,
+    .room>p,
     .amountPatient {
         font-size: 18px;
     }
 }
 
-@media (max-width: 992px) {
-    p,
+@media (max-width: 920px) {
+    .room>p,
     .amountPatient {
         font-size: 25px;
+    }
+}
+
+@media (max-width: 1120px) {
+    .room>p,
+    .amountPatient {
+        font-size: 29px;
     }
 }
