changed display of info

--- a/src/InsideRoom/PatientInRoom.module.scss
+++ b/src/InsideRoom/PatientInRoom.module.scss
@@ -4,6 +4,11 @@
     border: 2px solid black;
 }
 
+.p {
+    text-align: center;
+    font-size: 150%;
+}
+
 input {
     width: 45%;
     height: 25px;
