--- a/src/Title.module.scss
+++ b/src/Title.module.scss
@@ -1,5 +1,5 @@
 h1 {
-    grid-area: header;
+    display: block;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: blue;
