--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,6 @@
-.app {
-    margin-right: 26px;
-    display: grid;
-    grid-template-columns: repeat(3, 28%);
-    grid-template-rows: auto;
-    grid-template-areas: "header header header";
-    gap: 50px 60px;
-    justify-content: center;
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    overflow: hidden;
 }
