--- a/src/InsideRoom/PatientInRoom.module.scss
+++ b/src/InsideRoom/PatientInRoom.module.scss
@@ -1,7 +1,8 @@
 .patientBed {
     background-color: rgb(169, 169, 248);
-    width: 92%;
     border: 2px solid black;
+    padding: 20px;
+    width: 120%;
 }
 
 .p {
