--- a/src/InsideRoom/PatientInRoom.module.scss
+++ b/src/InsideRoom/PatientInRoom.module.scss
@@ -2,10 +2,14 @@
     background-color: rgb(169, 169, 248);
     border: 2px solid black;
     padding: 20px;
-    width: 120%;
+    width: 20%;
+    &:hover {
+        cursor: grab;
+        background-color: aliceblue;
+    }
 }
 
-.p {
+.bedWords {
     text-align: center;
     font-size: 150%;
 }
