--- a/src/Header/Title.module.scss
+++ b/src/Header/Title.module.scss
@@ -11,3 +11,9 @@ h1:hover {
     transform: scale(1.1);
     transition: ease-in-out;
 }
+
+@media (max-width: 410px) {
+    h1 {
+        font-size: 50px;
+    }
+}
