set active person

--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -1,8 +1,8 @@
-$bed-color: #a9a9f8;
+$bed-color: rgb(16, 211, 211);
 .form {
     display: flex;
     flex-flow: column wrap;
-    margin: 2% 14% 2%;
+    margin: 3% 14% 3%;
 }
 
 label {
