--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -1,8 +1,8 @@
-$bed-color: rgb(16, 211, 211);
+$primary-color: rgb(16, 211, 211);
 .form {
     display: flex;
     flex-flow: column wrap;
-    margin: 3% 14% 3%;
+    margin: 4% 14% 2%;
 }
 
 label {
@@ -23,23 +23,38 @@ textarea {
 
 .headerBed {
     text-align: center;
-    color: $bed-color;
+    color: $primary-color;
     margin-bottom: 10px;
 }
 
-.headerClean,
-.submit {
+.mainHeader {
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons {
     width: 25%;
     margin: 0 auto;
     margin-bottom: 10px;
     text-align: center;
-    border: 2px solid $bed-color;
     padding: 2px;
-    background-color: $bed-color;
     font-weight: 500;
+}
+
+.remove {
+    background-color: rgb(236, 46, 46);
+    border: 2px solid rgb(236, 46, 46);
     &:hover {
         cursor: grab;
         background-color: white;
-        color: $bed-color;
+    }
+}
+
+.submit {
+    background-color: yellowgreen;
+    border: 2px solid yellowgreen;
+    &:hover {
+        cursor: grab;
+        background-color: white;
     }
 }
