changed  App interface

--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -2,7 +2,7 @@ $primary-color: rgb(16, 211, 211);
 .form {
     display: flex;
     flex-flow: column wrap;
-    margin: 4% 14% 2%;
+    margin: 4% 0 2%;
 }
 
 label {
