--- a/src/Header/Title.module.scss
+++ b/src/Header/Title.module.scss
@@ -2,7 +2,7 @@ h1 {
     display: block;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: blue;
+    color: rgb(223, 112, 233);
     font-size: 60px;
     width: 100%;
 }
