--- a/src/InsideRoom/Beds.module.scss
+++ b/src/InsideRoom/Beds.module.scss
@@ -7,6 +7,7 @@ $emptybed-letters: rgb(61, 61, 231);
     text-align: center;
     height: 162px;
     margin-bottom: 4%;
+    font-weight: 700;
     &.emptyBed {
         background-color: $empty-bed;
         color: $emptybed-letters;
