--- a/src/RoomsInWard/Room.module.scss
+++ b/src/RoomsInWard/Room.module.scss
@@ -3,7 +3,7 @@ $isolation-color: rgb(9, 255, 0);
 $intensive-color: rgb(235, 35, 35);
 .room {
     height: 260px;
-    margin: 10% 2% 2% 10%;
+    margin: 10% 2%;
     border-radius: 6px;
     text-align: center;
     border-width: 3px;
@@ -42,6 +42,10 @@ $intensive-color: rgb(235, 35, 35);
 }
 
 @media (max-width: 410px) {
+    .room {
+        margin-left: 0;
+        margin-right: 0;
+    }
     .room,
     .amountPatient {
         font-size: 16px;
