--- a/src/InsideRoom/Common.module.scss
+++ b/src/InsideRoom/Common.module.scss
@@ -6,7 +6,7 @@ $emptybed-letters: rgb(61, 61, 231);
     padding: 10px;
     text-align: center;
     height: 162px;
-    margin-bottom: 4%;
+    margin-bottom: 5%;
     font-weight: 700;
     &.emptyBed {
         background-color: $empty-bed;
@@ -14,7 +14,7 @@ $emptybed-letters: rgb(61, 61, 231);
         &:hover {
             cursor: grab;
             background-color: white;
-            border: 2px solid $active-bed;
+            border: 4px solid $active-bed;
         }
     }
     &.fillBed {
@@ -23,7 +23,7 @@ $emptybed-letters: rgb(61, 61, 231);
         &:hover {
             cursor: grab;
             background-color: white;
-            border: 2px solid $empty-bed;
+            border: 4px solid $empty-bed;
         }
     }
     &.active {
@@ -32,10 +32,10 @@ $emptybed-letters: rgb(61, 61, 231);
     &.addBed {
         padding-top: 35px;
         color: $empty-bed;
-        border: 2px solid $empty-bed;
+        border: 4px solid $empty-bed;
         &:hover {
             cursor: grab;
-            border: 2px solid $active-bed;
+            border: 4px solid $active-bed;
             color: $active-bed;
         }
         .addBedIcon {
@@ -57,7 +57,7 @@ $emptybed-letters: rgb(61, 61, 231);
 @media (max-width: 920px) {
     .container {
         .containerItem {
-            margin: 0 5px;
+            margin: 5px;
             flex: 0 0 45%;
         }
     }
