--- a/src/InsideRoom/Bed.module.scss
+++ b/src/InsideRoom/Bed.module.scss
@@ -11,7 +11,7 @@ $emptybed-letters: rgb(61, 61, 231);
         color: $emptybed-letters;
     }
     &.active {
-        color: $activebed-letters;
+        color: white;
     }
 }
 
