--- a/src/Header/Title.module.scss
+++ b/src/Header/Title.module.scss
@@ -1,4 +1,4 @@
-h1 {
+.title {
     display: block;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -7,13 +7,13 @@ h1 {
     width: 100%;
 }
 
-h1:hover {
+.title:hover {
     transform: scale(1.1);
     transition: ease-in-out;
 }
 
 @media (max-width: 410px) {
-    h1 {
+    .title {
         font-size: 50px;
     }
 }
