--- a/src/Popup/RemoveBedPopup.module.scss
+++ b/src/Popup/RemoveBedPopup.module.scss
@@ -1,4 +1,5 @@
 .main {
+    filter: blur(0px);
     position: absolute;
     top: 25%;
     padding-top: 30px;
@@ -9,29 +10,25 @@
     text-align: center;
     color: red;
     border: 4px solid red;
-}
-
-.description {
-    color: black;
-}
-
-.buttons {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.accept,
-.reject {
-    padding: 10px;
-    border: none;
-    color: white;
-    width: 20%;
-}
-
-.accept {
-    background-color: red;
-}
-
-.reject {
-    background-color: rgb(102, 94, 94);
+    .description {
+        color: black;
+    }
+    .buttons {
+        display: flex;
+        justify-content: space-evenly;
+        .accept,
+        .reject {
+            cursor: grab;
+            padding: 10px;
+            border: none;
+            color: white;
+            width: 20%;
+        }
+        .accept {
+            background-color: red;
+        }
+        .reject {
+            background-color: rgb(102, 94, 94);
+        }
+    }
 }
