--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -1,8 +1,11 @@
 $primary-color: rgb(16, 211, 211);
 .form {
     display: flex;
+    position: absolute;
+    left: 10%;
+    width: 80%;
+    padding: 10px;
     flex-flow: column wrap;
-    margin: 4% 0 2%;
 }
 
 label {
