--- a/src/RoomsInWard/Rooms.module.scss
+++ b/src/RoomsInWard/Rooms.module.scss
@@ -1,3 +1,10 @@
+.container {
+    overflow: hidden;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
 @media (max-width: 920px) {
     .roomContainer {
         flex: 0 0 50%;
