--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -1,15 +1,27 @@
-$primary-color: rgb(16, 211, 211);
+$primary-color: rgb(11, 105, 160);
 .form {
     display: flex;
     position: absolute;
-    left: 10%;
-    width: 80%;
-    padding: 10px;
-    flex-flow: column wrap;
+    background: white;
+    top: 2%;
+    bottom: 2%;
+    left: 20%;
+    width: 60%;
+    padding: 14px;
+    flex-flow: column;
+    border: 2px solid $primary-color;
+    border-radius: 10px;
 }
 
 label {
     margin-top: 2%;
+}
+
+.closeIcon {
+    color: red;
+    position: absolute;
+    right: 2%;
+    cursor: grab;
 }
 
 .inputs {
