--- a/src/InsideRoom/Common.module.scss
+++ b/src/InsideRoom/Common.module.scss
@@ -6,7 +6,7 @@ $emptybed-letters: rgb(61, 61, 231);
     padding: 10px;
     text-align: center;
     height: 162px;
-    margin-bottom: 5%;
+    margin-bottom: 5px;
     font-weight: 700;
     &.emptyBed {
         color: $emptybed-letters;
