added name of bed in 'patient'

--- a/src/AboutPatient/Patient.module.scss
+++ b/src/AboutPatient/Patient.module.scss
@@ -39,3 +39,14 @@ $purple: rgb(223, 112, 233);
     white-space: pre-wrap;
     word-wrap: break-word;
 }
+
+.bedName {
+    border-radius: 22%;
+    padding: 10px;
+    text-align: center;
+    background: #df70e9;
+    color: white;
+    width: 24%;
+    display: block;
+    margin: 0 auto;
+}
