--- a/src/AboutPatient/PatientForm.module.scss
+++ b/src/AboutPatient/PatientForm.module.scss
@@ -1,7 +1,7 @@
 $primary-color: rgb(11, 105, 160);
 .form {
     display: flex;
-    position: absolute;
+    position: fixed;
     background: white;
     top: 2%;
     bottom: 2%;
