--- a/src/InsideRoom/Common.module.scss
+++ b/src/InsideRoom/Common.module.scss
@@ -57,6 +57,7 @@ $emptybed-letters: rgb(61, 61, 231);
     width: 100%;
     .containerItem {
         flex: 0 0 30%;
+        margin-bottom: 15px;
     }
 }
 
