--- a/src/AboutPatient/PatientForm.module.scss
+++ b/src/AboutPatient/PatientForm.module.scss
@@ -3,9 +3,9 @@ $primary-color: rgb(11, 105, 160);
     display: flex;
     position: fixed;
     background: white;
-    top: 2%;
-    bottom: 2%;
-    left: 20%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 60%;
     padding: 14px;
     flex-flow: column;
